# photo_bot

./: Cargo.toml  README.md
src/: base.rs  main.rs
src/commands/: base.rs  hello.rs  help.rs  mod.rs  weather.rs  weather_commands.rs
src/weather/: mod.rs  weather_check.rs
src/weather_data_model/: weather_data.rs
