[package]
name = "photo_bot_giu"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1.18"
inventory = "0.3"
async-trait = "0.1.86"
