[package]
name = "photo_bot_giu"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide/", features = ["full"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1.18"
chrono = { version = "0.4.40", features = ["serde"] }
